--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/node": "^22.5.1",
     "@types/supertest": "^6.0.2",
     "jest": "^29.7.0",
+    "jest-ctrf-json-reporter": "^0.0.9",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
