--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,3 +27,4 @@ jobs:
         run: npm run test
       - name: Publish Test Summary Results
         run: npx github-actions-ctrf ctrf/ctrf-report.json
+        if: always()
